Applied Sound Classfication (YAMNet) (Not Tested)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    aaptOptions {
-        noCompress "tflite"
-    }
 
     buildTypes {
         release {
@@ -49,6 +46,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    androidResources {
+        noCompress 'tflite'
+    }
 }
 
 // YAMNet Model Download
@@ -60,7 +60,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
     // Test
