--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        gradle_version = "7.0.1"
-        kotlin_version = "1.5.30"
+        gradle_version = '7.0.2'
+        kotlin_version = "1.5.31"
     }
     repositories {
         google()
