--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         gradle_version = '7.0.3'
         kotlin_version = "1.5.31"
+        room_version = "2.3.0"
     }
     repositories {
         google()
