Changed UI & Added Classify History

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,21 @@
     package="kr.ac.gachon.sw.safenoisecanceling">
 
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!-- Runtime Permission (Need to Permission Request)  -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- Runtime Permission (Need to Permission Request) -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
+        android:name=".ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".ApplicationClass"
         android:theme="@style/Theme.SafeNoiseCanceling">
+
         <activity
-            android:name=".activity.MainActivity"
+            android:name="kr.ac.gachon.sw.safenoisecanceling.ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,18 +26,19 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".service.SoundClassificationService"
+        <service
+            android:name=".service.SoundClassificationService"
             android:enabled="true"
             android:exported="false" />
 
-        <receiver android:name=".receiver.TransitionsReceiver"
+        <receiver
+            android:name=".receiver.TransitionsReceiver"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
 
     </application>
-
 </manifest>
