--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation 'androidx.preference:preference:1.1.1'
 
     // Test
     testImplementation 'junit:junit:4.+'
@@ -88,4 +85,7 @@ dependencies {
     // Room DB
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // View
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
 }
