--- a/wearable/build.gradle
+++ b/wearable/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "kr.ac.gachon.sw.safenoisecanceling"
         minSdk 28
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 1000
+        versionName "1.0.0a"
 
     }
 
@@ -27,11 +27,18 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.wear:wear:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.wear.tiles:tiles:1.1.0-alpha04"
+    implementation "androidx.wear.tiles:tiles-material:1.1.0-alpha04"
+    debugImplementation "androidx.wear.tiles:tiles-renderer:1.1.0-alpha04"
+    testImplementation "androidx.wear.tiles:tiles-testing:1.1.0-alpha04"
+    implementation "com.google.guava:guava:31.0.1-android"
+    implementation "androidx.concurrent:concurrent-futures:1.1.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.6.0"
 }
